--- a/src/template/common/common.scss
+++ b/src/template/common/common.scss
@@ -1,5 +1,69 @@
-@import "../../sass_mixin/_mixin.scss";
+@import "../../theme/_theme";
 
 html {
     font-size: 16px;
+}
+
+body {
+    background: #f5f6f6;
+}
+
+.film-wrapper {
+    width: 100%;
+    max-width: 2400px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.wrap {
+    width: 100%;
+    max-width: 2120px;
+    box-sizing: border-box;
+    margin: 0 auto;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background: #e0e1e2;
+}
+
+.padding {
+    padding: 0 24px;
+}
+
+.flex {
+    display: flex;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.transparent {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.clip {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
