--- a/src/template/index.html
+++ b/src/template/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieRise</title>
     <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <main class="main">
+    <div class="film-wrapper">
         @@include('./header/header.html')
-    </main>
+        @@include('./slider/slider.html')
+        @@include('./navigation/navigation.html')
+        @@include('./content/content.html')
+    </div>
 </body>
 </html>
