--- a/src/template/style.scss
+++ b/src/template/style.scss
@@ -1,2 +1,5 @@
 @import "../template/common/common";
 @import "../template/header/header";
+@import "../template/slider/slider";
+@import "../template/navigation/navigation";
+@import "../template/content/content";
