--- a/src/template/header/header.html
+++ b/src/template/header/header.html
@@ -1,9 +1,5 @@
 <header class="header wrap padding">
-    <figure>
-        <a href="">
-            <img src="../../img/logo.png" alt="movie rise">
-        </a>
-    </figure>
+    <a href="" class="logo">Movie<span>rise</span></a>
     <form method="GET">
         <label>
             <input type="search" class="movie-button">
