--- a/src/template/index.html
+++ b/src/template/index.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    @@include('./header/header.html')
     <div class="film-wrapper">
-        @@include('./header/header.html')
         @@include('./slider/slider.html')
         @@include('./navigation/navigation.html')
         @@include('./content/content.html')
+        @@include('./spinner/spinner.html')
     </div>
+    @@include('./footer/footer.html')
 </body>
 </html>
