--- a/src/template/style.scss
+++ b/src/template/style.scss
@@ -3,3 +3,5 @@
 @import "../template/slider/slider";
 @import "../template/navigation/navigation";
 @import "../template/content/content";
+@import "../template/spinner/spinner";
+@import "../template/footer/footer";
