--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,10 @@ body {
   width: 100%;
   max-width: 2400px;
   margin: 0 auto;
-  position: relative; }
+  position: relative;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column; }
 
 .wrap {
   width: 100%;
@@ -56,7 +59,15 @@ body {
   display: flex;
   flex-wrap: wrap; }
 
-.transparent, .content .film-active .film-active-wrapper {
+.flex-column {
+  display: flex;
+  flex-direction: column; }
+
+.center {
+  display: flex;
+  justify-content: center; }
+
+.transparent {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -107,6 +118,15 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 1; }
+  .header a.logo {
+    font-family: 'Helvetica-Black', sans-serif;
+    font-size: 3.125rem;
+    text-transform: uppercase;
+    color: white; }
+    .header a.logo:active, .header a.logo:focus {
+      color: white; }
+    .header a.logo span {
+      font-family: 'Helvetica-Thin', sans-serif; }
   .header label {
     position: relative; }
     .header label input[type="search"] {
@@ -369,7 +389,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(450px, 500px));
   grid-gap: 40px;
-  justify-content: space-evenly; }
+  justify-content: center; }
   .content .film {
     width: 100%;
     min-width: 450px;
@@ -377,7 +397,7 @@ body {
     overflow: hidden;
     position: relative;
     border-radius: 6px;
-    background: url("../../img/no-image.png") 50% 0 no-repeat; }
+    background: url("../../img/no-image.png") 50% 50% no-repeat; }
     .content .film:hover .description-hover {
       display: flex; }
     .content .film .description-wrapper,
@@ -451,6 +471,12 @@ body {
     position: relative;
     background-size: cover; }
     .content .film-active .film-active-wrapper {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.4);
       z-index: 1;
       box-sizing: border-box;
       padding: 40px; }
@@ -478,3 +504,159 @@ body {
       color: white;
       margin-bottom: 6%;
       line-height: 40px; }
+
+.banner-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1% auto;
+  background: url("../../img/banner_bg.png") 50% 50% no-repeat; }
+  .banner-wrapper .banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    padding: 6% 0; }
+    .banner-wrapper .banner h2 {
+      font-family: 'Helvetica-Light', sans-serif;
+      color: white;
+      font-size: 3.5rem;
+      margin-bottom: 2%;
+      max-width: 1110px;
+      text-align: center; }
+
+.movie-button, .slider__footer--control .favorites,
+.movie-button-border {
+  font-family: 'Helvetica-Regular', sans-serif;
+  color: white;
+  background: transparent;
+  padding: 20px 40px;
+  border-radius: 6px;
+  border: none;
+  font-size: 1.75rem;
+  cursor: pointer; }
+  .movie-button:hover, .slider__footer--control .favorites:hover,
+  .movie-button-border:hover {
+    background: #0aaee4; }
+
+.movie-button-border {
+  border: 2px solid white; }
+  .movie-button-border:hover {
+    border-color: transparent; }
+
+.active {
+  background: #0aaee4 !important; }
+
+.spinner {
+  margin: 100px 0;
+  text-align: center; }
+  .spinner:after {
+    font-family: 'Helvetica-Medium', sans-serif;
+    content: 'loading';
+    display: block;
+    font-size: 1.375rem;
+    color: #acafb0;
+    text-transform: uppercase;
+    margin-top: 20px; }
+  .spinner div {
+    width: 18px;
+    height: 18px;
+    background-color: #0aaee4;
+    border-radius: 100%;
+    display: inline-block;
+    animation: spinner 1.5s infinite ease-in-out; }
+  .spinner .bounce1 {
+    animation-delay: -0.32s; }
+  .spinner .bounce2 {
+    animation-delay: -0.16s; }
+
+@keyframes spinner {
+  0%,
+  80%,
+  100% {
+    transform: scale(0); }
+  40% {
+    transform: scale(1); } }
+
+.movie-button, .slider__footer--control .favorites,
+.movie-button-border {
+  font-family: 'Helvetica-Regular', sans-serif;
+  color: white;
+  background: transparent;
+  padding: 20px 40px;
+  border-radius: 6px;
+  border: none;
+  font-size: 1.75rem;
+  cursor: pointer; }
+  .movie-button:hover, .slider__footer--control .favorites:hover,
+  .movie-button-border:hover {
+    background: #0aaee4; }
+
+.movie-button-border {
+  border: 2px solid white; }
+  .movie-button-border:hover {
+    border-color: transparent; }
+
+.active {
+  background: #0aaee4 !important; }
+
+.footer-wrapper {
+  width: 100%;
+  background: white; }
+  .footer-wrapper .footer {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 700px));
+    justify-content: space-between;
+    padding: 70px 0; }
+    .footer-wrapper .footer__menu li:not(:last-of-type) {
+      margin-right: 20px; }
+    .footer-wrapper .footer__menu a {
+      font-family: 'Helvetica-Regular', sans-serif;
+      font-size: 1.5rem;
+      color: #a7aaab;
+      text-align: center; }
+      .footer-wrapper .footer__menu a:hover {
+        text-decoration: underline; }
+    .footer-wrapper .footer__copyright {
+      justify-content: center; }
+      .footer-wrapper .footer__copyright a.logo {
+        font-family: 'Helvetica-Black', sans-serif;
+        font-size: 3.125rem;
+        text-transform: uppercase;
+        color: #0aaee4; }
+        .footer-wrapper .footer__copyright a.logo:active, .footer-wrapper .footer__copyright a.logo:focus {
+          color: #0aaee4; }
+        .footer-wrapper .footer__copyright a.logo span {
+          font-family: 'Helvetica-Thin', sans-serif; }
+      .footer-wrapper .footer__copyright a {
+        margin-bottom: 8%; }
+      .footer-wrapper .footer__copyright--description {
+        font-family: 'Helvetica-Regular', sans-serif;
+        font-size: 1.5rem;
+        color: #a7aaab; }
+        .footer-wrapper .footer__copyright--description a.logo {
+          font-family: 'Helvetica-Black', sans-serif;
+          font-size: 1.5rem;
+          text-transform: uppercase;
+          color: #a7aaab; }
+          .footer-wrapper .footer__copyright--description a.logo:active, .footer-wrapper .footer__copyright--description a.logo:focus {
+            color: #a7aaab; }
+          .footer-wrapper .footer__copyright--description a.logo span {
+            font-family: 'Helvetica-Thin', sans-serif; }
+        .footer-wrapper .footer__copyright--description a {
+          margin: 0 5px; }
+    .footer-wrapper .footer__social {
+      justify-content: flex-end; }
+      .footer-wrapper .footer__social a {
+        display: block; }
+        .footer-wrapper .footer__social a i {
+          transition: transform 0.2s linear;
+          font-size: 30px;
+          color: #a7aaab; }
+          .footer-wrapper .footer__social a i:hover {
+            transform: scale(1.3);
+            color: #656869; }
+      .footer-wrapper .footer__social a:not(:last-of-type) {
+        margin-right: 20px; }
