--- a/src/template/content/content.html
+++ b/src/template/content/content.html
@@ -261,3 +261,91 @@
         </div>
     </div>
 </div>
+<aside class="banner-wrapper wrap">
+    <div class="banner">
+        <h2>Receive information on the latest hit movies straight to your inbox</h2>
+        <button class="movie-button active">Subscribe!</button>
+    </div>
+</aside>
+<div class="content wrap">
+    <div class="film" style="background-image: url(../../img/6.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">Captain America Civil War</h2>
+                <div class="film__description--rating">4.9</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Action</a></li>
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Sci-Fi</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="film" style="background-image: url(../../img/2.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">AssAssin’s Creed</h2>
+                <div class="film__description--rating">4.2</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Action</a></li>
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Fantasy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="film" style="background-image: url(../../img/5.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">Doctor Strange</h2>
+                <div class="film__description--rating">4.8</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Action</a></li>
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Fantasy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="film" style="background-image: url(../../img/7.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">Alice Through the bla-bla</h2>
+                <div class="film__description--rating">4.1</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Family</a></li>
+                    <li><a href="">Fantasy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
