--- a/src/template/content/content.scss
+++ b/src/template/content/content.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(450px, 500px));
     grid-gap: 40px;
-    justify-content: space-evenly;
+    justify-content: center;
 
     .film {
         width: 100%;
@@ -13,7 +13,7 @@
         overflow: hidden;
         position: relative;
         border-radius: 6px;
-        background: url("../../img/no-image.png") 50% 0 no-repeat;
+        background: url("../../img/no-image.png") 50% 50% no-repeat;
 
         &:hover {
             .description-hover {
@@ -123,7 +123,7 @@
         background-size: cover;
 
         .film-active-wrapper {
-            @extend .transparent;
+            @include Transparent();
 
             z-index: 1;
             box-sizing: border-box;
@@ -169,6 +169,32 @@
                 margin-bottom: 6%;
                 line-height: 40px;
             }
+        }
+    }
+}
+
+.banner-wrapper {
+    @include align();
+
+    margin: 1% auto;
+    background: url("../../img/banner_bg.png") 50% 50% no-repeat;
+
+    .banner {
+        @include align();
+
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        padding: 6% 0;
+
+        h2 {
+            @include Helvetica-Light();
+
+            color: white;
+            font-size: 3.5rem;
+            margin-bottom: 2%;
+            max-width: 1110px;
+            text-align: center;
         }
     }
 }
