--- a/src/template/header/header.scss
+++ b/src/template/header/header.scss
@@ -1,6 +1,8 @@
 @import "../../theme/_theme";
 
 .header {
+    @include Logo($color: white);
+
     height: 120px;
     position: absolute;
     top: 0;
