--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -42,6 +42,43 @@ $brand-color: #0aaee4;
     justify-content: $horizontal;
 }
 
+@mixin Transparent($opacity: 0.4) {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, $opacity);
+}
+
+@mixin Logo($color: white, $size: 3.125rem) {
+    a.logo {
+        @include Helvetica-Black();
+
+        font-size: $size;
+        text-transform: uppercase;
+        color: $color;
+
+        &:active,
+        &:focus {
+            color: $color;
+        }
+
+        span {
+            @include Helvetica-Thin();
+        }
+    }
+}
+
+@mixin Multi-clip($line-count: 0, $max-height: auto) {
+    max-height: $max-height;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: $line-count;
+}
+
 .active {
     background: $brand-color !important;
 }
