--- a/src/template/footer/footer.html
+++ b/src/template/footer/footer.html
@@ -1,7 +1,7 @@
-<div class="footer-wrapper">
+<div class="footer-wrapper padding">
     <div class="footer wrap">
-        <nav class="footer__menu">
-            <ul class="flex">
+        <nav class="footer__menu flex">
+            <ul class="flex flex flex-wrap">
                 <li>
                     <a href="">About</a>
                 </li>
@@ -15,19 +15,8 @@
         </nav>
         <div class="footer__copyright flex flex-column">
             <a href="" class="logo center">Movie<span>rise</span></a>
-            <div class="footer__copyright--description center">
-                <span>
-                    Copyright © 2017
-                </span>
-                <a class="logo">
-                    MOVIE<span>RISE</span>
-                </a>.
-                <span>
-                    All Rights Reserved.
-                </span>
-            </div>
         </div>
-        <div class="footer__social flex-wrap">
+        <div class="footer__social flex flex-wrap">
             <a href="">
                 <i class="fab fa-facebook-f"></i>
             </a>
@@ -44,5 +33,16 @@
                 <i class="fab fa-youtube"></i>
             </a>
         </div>
+    </div>
+    <div class="footer-copyright center flex flex-wrap">
+        <span>
+            Copyright © 2017
+        </span>
+        <a class="logo">
+            MOVIE<span>RISE</span>
+        </a>.
+        <span>
+            All Rights Reserved.
+        </span>
     </div>
 </div>
