--- a/src/template/header/header.html
+++ b/src/template/header/header.html
@@ -1,6 +1,6 @@
 <header class="header wrap padding">
     <a href="" class="logo">Movie<span>rise</span></a>
-    <form method="GET">
+    <form method="GET" class="fle flex-wrap center">
         <label>
             <input type="search" class="movie-button">
             <i class="fas fa-search"></i>
