--- a/src/template/common/common.scss
+++ b/src/template/common/common.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .padding {
-    padding: 0 24px;
+    padding: 0 1%;
 }
 
 .flex {
@@ -56,6 +56,7 @@ body {
 .center {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .transparent {
@@ -79,4 +80,28 @@ body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+@media all and (max-width: 1700px) {
+    html {
+        font-size: 15px;
+    }
+}
+
+@media all and (max-width: 1500px) {
+    html {
+        font-size: 14px;
+    }
+}
+
+@media all and (max-width: 1200px) {
+    html {
+        font-size: 13px;
+    }
+}
+
+@media all and (max-width: 800px) {
+    html {
+        font-size: 12px;
+    }
 }
