--- a/src/template/content/content.scss
+++ b/src/template/content/content.scss
@@ -2,7 +2,7 @@
 
 .content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(450px, 500px));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 500px));
     grid-gap: 40px;
     justify-content: center;
 
@@ -189,12 +189,23 @@
 
         h2 {
             @include Helvetica-Light();
+            @include Multi-clip($line-count: 6);
 
             color: white;
             font-size: 3.5rem;
             margin-bottom: 2%;
             max-width: 1110px;
             text-align: center;
+        }
+    }
+}
+
+@media all and (max-width: 950px) {
+    .banner-wrapper {
+        .banner {
+            h2 {
+                font-size: 2.1rem;
+            }
         }
     }
 }
