--- a/src/template/slider/slider.scss
+++ b/src/template/slider/slider.scss
@@ -33,8 +33,9 @@
         &--info {
             h1 {
                 @include Helvetica-Bold();
+                @include Multi-clip($line-count: 2);
 
-                font-size: 60px;
+                font-size: 3.75rem;
                 text-transform: uppercase;
                 margin-bottom: 24px;
             }
@@ -136,6 +137,40 @@
                     color: white;
                 }
             }
+        }
+    }
+}
+
+@media all and (max-width: 1000px) {
+    .slider {
+        &__page {
+            flex-direction: row;
+            justify-content: center;
+
+            button {
+                width: 25px;
+                height: 6px;
+                margin-right: 5px;
+            }
+        }
+
+        &__footer {
+            grid-template-columns: 1fr;
+
+            &--info {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            &--control {
+                display: flex;
+                justify-content: center;
+            }
+        }
+
+        .padding {
+            padding: 0;
         }
     }
 }
